# algorithms-illuminated-part-1

./: .gitignore  LICENSE  README.md  install-extensions.ps1  pyproject.toml  start.ps1  start.sh
chapter_1/: merge_sort.ipynb  problem_1_5.ipynb  problem_1_6.ipynb
chapter_3/: problem_3_2.ipynb  problem_3_3.ipynb  problem_3_4.ipynb  problem_3_5.ipynb
