[tool.poetry]
name = "algorithms-illuminated-part-1"
version = "0.1.0"
description = ""
authors = ["Marcus Vinicius Monteiro de Souza <marcusmonteirodesouza@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
jupyterlab = "^2.2.9"
hypothesis = "^5.41.0"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
jupyterlab-code-formatter = "^1.3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
